2014-07-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-manage-certs.sh: Make cleanup depend on
	Debug mode.
	
2014-07-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-manage-certs.sh: Initial revision of new certificate
	management script.

2014-07-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/nasl_plugins.c (nasl_thread_args): New struct.
	(nasl_thread): Take a nasl_thread_args pointer as function argument.
	(nasl_plugin_launch): Adjust function call accordingly.

2014-07-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start): Don't attempt to randomly close all
	possibly open file descriptors. Close parent_socket.

	* src/nasl_plugins.c (nasl_thread): Reset kb link as this function is
	called in forked process. Don't attempt to close all possibly open file
	descriptors.
	(scanner_thread): Add socket fd to globals.

2014-07-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start_args): Add parent_socket element.
	(attack_start): Close unused sockets. Update code style.
	(attack_network): Set attack arguments accordingly.

	* src/nasl_plugins.c (nasl_thread): Close old socket file descriptor
	after duplicating it.

2014-07-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (struct running): Remove useless kb, name and sched
	elements.
	(update_running_processes, read_running_processes, plugin_launch):
	Update for running structure's changes.
	(pluginlaunch_child_cleanup): New function.

	* src/pluginlaunch.h: Add function prototype.

	* src/nasl_plugins.c (nasl_thread): Cleanup plugin launcher leftovers.

2014-07-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/hosts.c (struct host): Remove useless psoc element.
	(host_rm, hosts_set_pid): Adjust for host structure change.
	(hosts_new): Take host socket as a function argument instead of creating
	an unnamed socket pair. Adjust return value accordingly.
